--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -69,8 +69,12 @@ h6 {
     background-color: #222;
 }
 
+.btn {
+    transition: .1s all;
+}
+
 .btn-primary {
-    border-color: #{{ site.data.template.color.primary }};
+    /* border-color: #{{ site.data.template.color.primary }}; */
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
     font-weight: 700;
@@ -83,7 +87,7 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #{{ site.data.template.color.primary }};
+    /* border-color: #{{ site.data.template.color.primary }}; */
     color: #fff;
     background-color: #{{ site.data.template.color.secondary }};
 }
@@ -120,7 +124,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #{{ site.data.template.color.primary }};
+    /* border-color: #{{ site.data.template.color.primary }}; */
     border-radius: 3px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
@@ -135,7 +139,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #{{ site.data.template.color.primary }};
+    /* border-color: #{{ site.data.template.color.primary }}; */
     color: #fff;
     background-color: #{{ site.data.template.color.secondary }};
 }
@@ -161,7 +165,7 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #{{ site.data.template.color.primary }};
+    /* border-color: #{{ site.data.template.color.primary }}; */
     background-color: #{{ site.data.template.color.primary }};
 }
 
