Create custom pages for blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,7 +38,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
+                <div class="intro-lead-in">{{page.header}}</div>
             </div>
         </div>
     </header>
